# chat-server-client

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: client.cpp  lib.cpp  lib.hpp  server.cpp
test/: CMakeLists.txt
test/source/: chat-server_test.cpp
